--- a/package.json
+++ b/package.json
@@ -1,42 +1,35 @@
 {
-  "name": "portfolio-anish-seth",
-  "description": "Professional Portfolio of Anish Seth - Web Developer & UI/UX Designer",
-  "version": "2.0.0",
+  "name": "developer-portfolio",
+  "description": "Portfolio of Abu Said",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "type-check": "tsc --noEmit"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@emailjs/browser": "^4.4.1",
-    "@next/third-parties": "^15.1.0",
-    "axios": "^1.7.7",
-    "framer-motion": "^11.11.17",
+    "@emailjs/browser": "^4.3.1",
+    "@next/third-parties": "^14.1.3",
+    "axios": "^1.6.8",
     "lottie-react": "^2.4.0",
-    "next": "^15.1.0",
+    "next": "^14.2.15",
     "nodemailer": "^6.9.15",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-fast-marquee": "^1.6.5",
+    "react": "latest",
+    "react-dom": "latest",
+    "react-fast-marquee": "^1.6.2",
     "react-google-recaptcha": "^3.1.0",
-    "react-icons": "^5.3.0",
-    "react-toastify": "^10.0.6",
+    "react-icons": "^4.11.0",
+    "react-toastify": "^10.0.4",
     "sharp": "^0.33.5"
   },
   "devDependencies": {
-    "@types/node": "^22.10.1",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "@types/react-google-recaptcha": "^2.1.9",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9.17.0",
-    "eslint-config-next": "^15.1.0",
-    "postcss": "^8.5.1",
-    "sass": "^1.82.0",
-    "tailwindcss": "^3.4.17",
-    "typescript": "^5.7.2"
+    "autoprefixer": "latest",
+    "eslint": "latest",
+    "eslint-config-next": "latest",
+    "postcss": "latest",
+    "sass": "^1.69.5",
+    "tailwindcss": "latest"
   }
 }
