--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "sharp": "^0.33.5"
   },
   "devDependencies": {
+    "@types/node": "^24.0.13",
+    "@types/react": "^19.1.8",
     "autoprefixer": "latest",
     "eslint": "latest",
     "eslint-config-next": "latest",
